--- a/src/reset.css
+++ b/src/reset.css
@@ -24,6 +24,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 	box-sizing: border-box;
 	font-family: Arial, Helvetica, sans-serif;
+	overflow: hidden;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
